--- a/contact/index.html
+++ b/contact/index.html
@@ -87,7 +87,7 @@
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({ content })
   });
-  this.action = "https://formsubmit.co/あなたのメールアドレス";
+  this.action = "https://formsubmit.co/kyoukasuigetsu.809@gmail.com";
   this.method = "POST";
   this.submit();
 });
