--- a/contact/index.html
+++ b/contact/index.html
@@ -49,7 +49,7 @@
           気軽に連絡してください。</p>
           
           <form id="contact-form">
-          <input type="hidden" name="_next" value="https://kyokasuigetsu-kei.github.io/contact/thanks.html">
+          <input type="hidden" name="_next" value="https://kyokasuigetsu-kei.github.io/kyokasuigetsu.githib.io/contact/thanks.html">
           <input type="hidden" name="_captcha" value="false">
   
           お名前<br>
