--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <meta name="author" content="壁谷諭始">
-  <meta name="description content="ページ内容の説明">
+  <meta name="description content="キョーカスイゲツ。の公式サイト">
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
