--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <! doctype=html>
 <html>
  <head>
-  <meta name="author" content="壁谷諭始">
+  <meta name="author" content="キョーカスイゲツ。">
   <meta name="description content="キョーカスイゲツ。の公式サイト">
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
