0527コードの更新

--- a/index.html
+++ b/index.html
@@ -40,17 +40,32 @@
   </header>
   <p>あ</p>
   <p>あ</p>
-  <h2>top</h2>
+  <div class="header2"></div>
+    <img src="1500x500.jpg" title="top用の写真" width="100%">
+  </div>
+  <div class="header2char">
+      <h2>top</h2>
+    </div>
   <blockquote>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  <div class="honbun">
     <p>ボカロPのキョーカスイゲツ。の公式サイトです。</p>
-    <h3>news</h3>
+  </div>
+  <div class="sekiguti">
+    <h3>&emsp;新着情報(直近5件マデ)</h3>
     <ul>
-      <li>ニコニコ、youtubeチャンネルを公開しました。</li>
-      <li>新曲「青ヰ僕等ノ歌」を公開しました。</li>
-      <li>新曲「シリウス」を公開しました。</li>
-      <li>公式サイトを作成しました。</li>
+      <li><div class="day">2024/05</div>&emsp;<div class="content">ニコニコ、youtubeチャンネルを公開しました。</div></li>
+      <li><div class="day">2024/08</div>&emsp;<div class="content">新曲「青ヰ僕等ノ歌」を公開しました。</div></li>
+      <li><div class="day">2025/02</div>&emsp;<div class="content">新曲「シリウス」を公開しました。</div></li>
+      <li><div class="day">2025/05</div>&emsp;<div class="content">公式サイトを作成しました。</div></li>
     </ul>
-
+  </div>
   </blockquote>
+  </div>
  </body>
 </html>
