--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
   <div class="honbun">
     <p>ボカロPのキョーカスイゲツ。の公式サイトです。</p>
   </div>
+<div class="container">
   <div class="sekiguti">
     <h3>&emsp;新着情報(直近5件マデ)</h3>
     <ul>
@@ -65,6 +66,13 @@
       <li><div class="day">2025/05</div>&emsp;<div class="content">公式サイトを作成しました。</div></li>
     </ul>
   </div>
+  <div class="character">
+    <p class="kangei">訪問感謝！！
+</p>
+    <img src="イラスト4.jpg" class="mikusama">
+  </div>
+</div>
+</div>
   </blockquote>
   </div>
  </body>
