--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <ul>
         <li><a href="index.html">トップ</a></li>
         <li><a href="inform/index.html">お知らせ</a></li>
-        <li><a href="about_me/index.html">私について</a></li>
+        <li><a href="#about_me">私について</a></li>
         <li><a href="strage/index.html">作品置き場</a></li>
         <li><a href="contact/index.html">お問い合わせ</a></li>
     </ul>
@@ -56,23 +56,38 @@
   <div class="honbun">
     <p>ボカロPのキョーカスイゲツ。の公式サイトです。</p>
   </div>
-<div class="container">
-  <div class="sekiguti">
-    <h3>&emsp;新着情報(直近5件マデ)</h3>
-    <ul>
-      <li><div class="day">2024/05</div>&emsp;<div class="content">ニコニコ、youtubeチャンネルを公開しました。</div></li>
-      <li><div class="day">2024/08</div>&emsp;<div class="content">新曲「青ヰ僕等ノ歌」を公開しました。</div></li>
-      <li><div class="day">2025/02</div>&emsp;<div class="content">新曲「シリウス」を公開しました。</div></li>
-      <li><div class="day">2025/05</div>&emsp;<div class="content">公式サイトを作成しました。</div></li>
-    </ul>
+  <div class="container">
+    <div class="sekiguti">
+      <h3>&emsp;新着情報(直近5件マデ)</h3>
+      <ul>
+        <li><div class="day">2024/05</div>&emsp;<div class="content">ニコニコ、youtubeチャンネルを公開しました。</div></li>
+        <li><div class="day">2024/08</div>&emsp;<div class="content">新曲「青ヰ僕等ノ歌」を公開しました。</div></li>
+        <li><div class="day">2025/02</div>&emsp;<div class="content">新曲「シリウス」を公開しました。</div></li>
+        <li><div class="day">2025/05</div>&emsp;<div class="content">公式サイトを作成しました。</div></li>
+      </ul>
+    </div>
+    <div class="character">
+      <p class="kangei">訪問感謝！！
+  </p>
+      <img src="イラスト4.jpg" class="mikusama">
+    </div>
   </div>
-  <div class="character">
-    <p class="kangei">訪問感謝！！
-</p>
-    <img src="イラスト4.jpg" class="mikusama">
+  <p>&emsp;<br>&emsp;<br>&emsp;<br>&emsp;<br>&emsp;<br></p>
+  <div class="container">
+    <div class="character">
+      <p class="kangei">ボカロPのリンクは<a href="https://www.nicovideo.jp/user/132413782">こちら！</a></p>
+      <img src="イラスト4.jpg" class="mikusama">
+    </div>
+    <div class="sekiguti" id="about_me">
+      <h3>&emsp;<strong>私について</strong></h3>
+      <p>&emsp;&emsp;けぃえすPの名義で2024年5月に活動開始。<br>
+        &emsp;そのあとすぐに名義を鏡花水月に変更し一曲目「富貴桜の花束を君に」を&emsp;<br>
+        &emsp;リリース(あまりにも出来が恥ずかしいので非公開…いつか…ね)<br>
+        &emsp;そして、名義をキョーカスイゲツ。に変更し、ぼかえり2024夏に<br>
+        &emsp;「青ヰ僕等ノ歌」で参加。(<a href="https://www.nicovideo.jp/watch/sm44045801">リンク</a>)<br>
+        &emsp;現在の最新曲は2025冬のボカコレ参加曲の「シリウス」(<a href="https://www.nicovideo.jp/watch/sm44678570">リンク</a>)</p>
+    </div>
   </div>
-</div>
-</div>
   </blockquote>
   </div>
  </body>
