--- a/inform/index.html
+++ b/inform/index.html
@@ -40,16 +40,16 @@
             <ul>
                 <li><a href="../index.html">トップ</a></li>
                 <li><a href="../inform/index.html">お知らせ</a></li>
-                <li><a href="../about_me/index.html">私について</a></li>
+                <li><a href="../index.html#about_me">私について</a></li>
                 <li><a href="../strage/index.html">作品置き場</a></li>
                 <li><a href="../contact/index.html">お問い合わせ</a></li>
             </ul>
           </nav>
         <h1><a href="../index.html" style="text-decoration:none;";><font color="black">キョーカスイゲツ。の公式サイト</font></a></h1>
       </header>
-        <p></p>
-        <p></p>
-        <h2>News</h2>
+        <p>&emsp;</p>
+        <p>&emsp;</p>
+        <h2>News　Archive</h2>
 
     </body>
 </html>
