--- a/strage/index.html
+++ b/strage/index.html
@@ -31,7 +31,7 @@
             <ul>
                 <li><a href="../index.html">トップ</a></li>
                 <li><a href="../inform/index.html">お知らせ</a></li>
-                <li><a href="../about_me/index.html">私について</a></li>
+                <li><a href="../index.html#about_me">私について</a></li>
                 <li><a href="../strage/index.html">作品置き場</a></li>
                 <li><a href="../contact/index.html">お問い合わせ</a></li>
             </ul>
