--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     <p></p>
   <div class="honbun">
     <p>ボカロPのキョーカスイゲツ。の公式サイトです。</p>
+    <p>Offical SNS</p>
+    &emsp;&emsp14;<a href="https://x.com/K_ch3104"><img src="logo-black.png" class="xlogo"></a>&emsp;<a href="https://t.co/FSXi9v1SCt"><img src="yt_icon_mono_light.png" class="tubelogo"></a><a href="https://www.nicovideo.jp/user/132413782"><img src="nc296561__ニコニコ_シンボルマーク.png" class="nicologo"></a>
   </div>
   <div class="container">
     <div class="sekiguti">
@@ -72,7 +74,12 @@
       <img src="イラスト4.jpg" class="mikusama">
     </div>
   </div>
-  <p>&emsp;<br>&emsp;<br>&emsp;<br>&emsp;<br>&emsp;<br></p>
+  <p>&emsp;<br>&emsp;</p>
+  <div class="container">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/nB2YaosilcM?si=bjb1fjhk4ydC0YzE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/8cGpPAvFb8U?si=WKeVEjmYhCY-9mqt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  </div>
+  <p>&emsp;<br>&emsp;</p>
   <div class="container">
     <div class="character">
       <p class="kangei">ボカロPのリンクは<a href="https://www.nicovideo.jp/user/132413782">こちら！</a></p>
@@ -90,5 +97,7 @@
   </div>
   </blockquote>
   </div>
- </body>
+  <footer class="footer">
+          <p>© 2025 キョーカスイゲツ。</p>
+  </body>
 </html>
