--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
         &emsp;現在の最新曲は2025冬のボカコレ参加曲の「シリウス」(<a href="https://www.nicovideo.jp/watch/sm44678570">リンク</a>)</p>
     </div>
   </div>
+    <div class="honbun">
+      
+    </div>
   </blockquote>
   </div>
   <footer class="footer">
