--- a/inform/index.html
+++ b/inform/index.html
@@ -50,6 +50,14 @@
         <p>&emsp;</p>
         <p>&emsp;</p>
         <h2>News　Archive</h2>
+          <ul>
+            <li><div class="day">2025/05</div>&emsp;<div class="content">公式サイトを作成しました。</div></li>
+            <li><div class="day">2025/02</div>&emsp;<div class="content">新曲「シリウス」を公開しました。</div></li>
+            <li><div class="day">2024/08</div>&emsp;<div class="content">新曲「青ヰ僕等ノ歌」を公開しました。</div></li>
+            <li><div class="day">2024/05</div>&emsp;<div class="content">ニコニコ、youtubeチャンネルを公開しました。</div></li>
+          </ul>
+        <footer class="footer">
+          <p>© 2025 キョーカスイゲツ。</p>
 
     </body>
 </html>
