--- a/inform/index.html
+++ b/inform/index.html
@@ -51,6 +51,7 @@
         <p>&emsp;</p>
         <h2>News　Archive</h2>
           <ul>
+            <li><div class="day">2025/06</div>&emsp;<div class="content"><a href="005.html">ボカコレ2025夏ルーキーに参戦します。</a></div></li>
             <li><div class="day">2025/05</div>&emsp;<div class="content">公式サイトを作成しました。</div></li>
             <li><div class="day">2025/02</div>&emsp;<div class="content">新曲「シリウス」を公開しました。</div></li>
             <li><div class="day">2024/08</div>&emsp;<div class="content">新曲「青ヰ僕等ノ歌」を公開しました。</div></li>
@@ -58,6 +59,5 @@
           </ul>
         <footer class="footer">
           <p>© 2025 キョーカスイゲツ。</p>
-
     </body>
 </html>
