--- a/inform/001.html
+++ b/inform/001.html
@@ -47,8 +47,47 @@
           </nav>
         <h1><a href="../index.html" style="text-decoration:none;";><font color="black">キョーカスイゲツ。の公式サイト</font></a></h1>
       </header>
-        <footer class="footer">
-          <p>© 2025 キョーカスイゲツ。</p>
+        <p>&emsp;</p>
+        <p>&emsp;</p>
+        <div class="honbun">
+            <h3>ニコニコ、youtubeチャンネルを公開しました！</h3>2024/05/31
+            <p>こんにちは。<br>
+              まあ、公式サイトができたのが<br>
+              2025の五月ってとこから<br>
+              察してほしいんですけど<br>
+              この記事は2025年に書いてるわけですね。<br>
+              もはや、チャンネル作った時のことなんて<br>
+              覚えてるわけがないと。<br>
+              でも、何もないのも寂しいよなぁと思ったので<br>
+              名義の話でも書こうかな。<br>
+              <br>
+              一番最初に使ってた名義は「けーちゃん」なんですけど<br>
+              これは小学校のころ塾で何回か呼ばれて気に入ったやつですね<br>
+              そして「けぃ」になり(これは今でもゲームするときとかに使う)<br>
+              「鏡花水月」になったと。<br>
+              いや～名義なんてころころ変わりますよね。<br>
+              <br>
+              鏡花水月は一体どこから来たんだといいますと、<br>
+              ここからは私の素性を知ってる方向けなんですが、<br>
+              自分の名前とイニシャルが一致するようにしたんですね。<br>
+              四字熟語でイニシャルがSKになるやつないかなぁと<br>
+              探しているときに見つけました。<br>
+              <br>
+              ちなみに意味は「はかない幻のたとえ。<br>
+              目には見えるが、手に取ることのできないもののたとえ。<br>
+              また、感じ取れても説明できない奥深い趣のたとえ。<br>
+              詩歌・小説などの奥深い味わいのたとえ。<br>
+              本来は、鏡に映った美しい花と水に映った美しい月の意。<br>
+              それらは目には見えても見るだけで、実際に手に取ることができないことからいう。」<br>
+              <br>
+              どうでしょうか？めっちゃ素敵ですよね！？<br>
+              ということで、今回はこれくらいにしておこうかな。<br>
+              また次のコラムでお会いしましょう。<br>
+            </p>
+            
+        </div>
+        
+        <footer class="footer"><p>© 2025 キョーカスイゲツ。</p></footer>
 
     </body>
 </html>
