--- a/inform/002.html
+++ b/inform/002.html
@@ -49,16 +49,39 @@
       </header>
         <p>&emsp;</p>
         <p>&emsp;</p>
-        <h2>News　Archive</h2>
-          <ul>
-            <li><div class="day">2025/06</div>&emsp;<div class="content"><a href="">ボカコレ2025夏ルーキーに参戦します。</a></div></li>
-            <li><div class="day">2025/05</div>&emsp;<div class="content">公式サイトを作成しました。</div></li>
-            <li><div class="day">2025/02</div>&emsp;<div class="content">新曲「シリウス」を公開しました。</div></li>
-            <li><div class="day">2024/08</div>&emsp;<div class="content">新曲「青ヰ僕等ノ歌」を公開しました。</div></li>
-            <li><div class="day">2024/05</div>&emsp;<div class="content">ニコニコ、youtubeチャンネルを公開しました。</div></li>
-          </ul>
-        <footer class="footer">
-          <p>© 2025 キョーカスイゲツ。</p>
+        <div class="honbun">
+            <h3>新曲「青ヰ僕等ノ歌」を公開しました。</h3>2024/08/31
+            <p>
+              おはこんばんちわ。<br>
+              前回同様裏話でもしていきましょうかね。<br>
+              曲投稿のコラムということで、<br>
+              あおぼく(この曲の略称())の制作話をします。<br>
+              まず、ニコニコにもようつべにも初投稿って書いてありますが<br>
+              初作曲では全然ございません。<br>
+              この曲の前に歌詞入れまでしてボツにした子が2曲くらいあります。<br>
+              いつかどっかで出したいよね。<br>
+              そして、あおぼく、初音ミクをボーカルに使用していますが<br>
+              実は、キョーカスイゲツ。はこの頃、ボカロを持っていませんでした。<br>
+              ミクの体験版を使ったわけですね。<br>
+              これ、ほんと新人ボカロＰさんにおすすめですよ。<br>
+              39日間も使えるんですよ！？<br>
+              これを逃す手はないでしょう！<br>
+              <br>
+              ここからは曲の細かな話を。<br>
+              あおぼくの特徴として、あほみたいな回数の転調があげられますが<br>
+              あれはいくつかの曲のアイデアをキメラにした結果ですね。<br>
+              ちなみに一番のお気に入りは一番Ａメロの変イ長調の部分です。<br>
+              （実はあのピアノソロいまだに弾けていない）<br>
+              あと、最も気に入っている歌詞は<br>
+              一寸先も見えないこの町で～の部分です<br>
+              <br>
+              いつかリメイクをしたいよねって言葉で<br>
+              今回のコラムを締めくくらせてください。<br>
+              では次のコラムで会いましょう。
+            </p>
+        </div>
+        
+        <footer class="footer"><p>© 2025 キョーカスイゲツ。</p></footer>
 
     </body>
 </html>
