--- a/inform/003.html
+++ b/inform/003.html
@@ -1,5 +1,5 @@
 <! doctype=html>
-<html>
+  <html>
     <head>
         <meta name="author" content="壁谷諭始">
         <meta name="description content="お知らせ">
@@ -49,16 +49,34 @@
       </header>
         <p>&emsp;</p>
         <p>&emsp;</p>
-        <h2>News　Archive</h2>
-          <ul>
-            <li><div class="day">2025/06</div>&emsp;<div class="content"><a href="">ボカコレ2025夏ルーキーに参戦します。</a></div></li>
-            <li><div class="day">2025/05</div>&emsp;<div class="content">公式サイトを作成しました。</div></li>
-            <li><div class="day">2025/02</div>&emsp;<div class="content">新曲「シリウス」を公開しました。</div></li>
-            <li><div class="day">2024/08</div>&emsp;<div class="content">新曲「青ヰ僕等ノ歌」を公開しました。</div></li>
-            <li><div class="day">2024/05</div>&emsp;<div class="content">ニコニコ、youtubeチャンネルを公開しました。</div></li>
-          </ul>
-        <footer class="footer">
-          <p>© 2025 キョーカスイゲツ。</p>
+        <div class="honbun">
+            <h3>新曲「シリウス」を公開しました。</h3>2025/02
+            <p>
+              こんにちは。<br>
+              さすがに一気にコラムを書くのにも疲れてきました。<br>
+              どうも、キョーカスイゲツ。です。<br>
+              話変わりますけど、二度寝って最高ですよね。<br>
+              あぁ、ずっと寝ていたい。<br>
+              <br>
+              シリウスの裏話というと…<br>
+              まずミキシングソフトをAdobe Auditionにしたことですかね<br>
+              この曲まではgarage bandでやってたんですが、<br>
+              あまりにも操作性がよくなくて…<br>
+              乗り換えましたね。<br>
+              ほんとに使いやすい。(当たり前)<br>
+              2025年6月現在もミキシングはaudition使ってます。<br>
+              <br>
+              あぁ、あとAfter Effectsで動画編集してたんですけど<br>
+              突然動かなかくなっちゃって、AVIUTLに乗り換えましたね<br>
+              これがほんと優れもの。<br>
+              難点はいつ死ぬかわからないことくらい()<br>
+              <br>
+              書くこともうないな……<br>
+              では次のコラムで会いましょう。
+            </p>
+        </div>
+        
+        <footer class="footer"><p>© 2025 キョーカスイゲツ。</p></footer>
 
     </body>
 </html>
