--- a/inform/004.html
+++ b/inform/004.html
@@ -49,16 +49,35 @@
       </header>
         <p>&emsp;</p>
         <p>&emsp;</p>
-        <h2>News　Archive</h2>
-          <ul>
-            <li><div class="day">2025/06</div>&emsp;<div class="content"><a href="">ボカコレ2025夏ルーキーに参戦します。</a></div></li>
-            <li><div class="day">2025/05</div>&emsp;<div class="content">公式サイトを作成しました。</div></li>
-            <li><div class="day">2025/02</div>&emsp;<div class="content">新曲「シリウス」を公開しました。</div></li>
-            <li><div class="day">2024/08</div>&emsp;<div class="content">新曲「青ヰ僕等ノ歌」を公開しました。</div></li>
-            <li><div class="day">2024/05</div>&emsp;<div class="content">ニコニコ、youtubeチャンネルを公開しました。</div></li>
-          </ul>
-        <footer class="footer">
-          <p>© 2025 キョーカスイゲツ。</p>
+        <div class="honbun">
+            <h3>公式サイトを作成しました。</h3>2025/05
+            <p>
+              こんにちは。<br>
+              いや～、地獄のコラム更新からやっと解放される。<br>
+              どうも、キョーカスイゲツ。です。<br>
+              <br>
+              HTMLを触るのは、このサイト作りが人生二回目なんですよね。<br>
+              一回目は、学校の部活のホームページを作った時。<br>
+              というか、その時のコード若干借用してます。<br>
+              今回地味に苦労したのが、お問い合わせフォーム。<br>
+              前回はドメイン取って作ったので、phpが使えたんですけど<br>
+              今回はgithub。<br>
+              あれ、フォームどうやって作るんだと。<br>
+              chat gptさまに聞いちゃいましたね。<br>
+              <br>
+              あとは、なんだろう。<br>
+              コーディング技術は上がってきた気がするので、<br>
+              前よりも自由なことができましたね。<br>
+              java scriptもいい感じに組めたし。<br>
+              残るは媒体によって表示が変わってしまうことへの<br>
+              対策ですかね。<br>
+              さあ、他のコードも書かねば……<br>
+              <br>
+              では次のコラムで会いましょう！！
+            </p>
+        </div>
+        
+        <footer class="footer"><p>© 2025 キョーカスイゲツ。</p></footer>
 
     </body>
 </html>
