--- a/inform/index.html
+++ b/inform/index.html
@@ -51,11 +51,11 @@
         <p>&emsp;</p>
         <h2>News　Archive</h2>
           <ul>
-            <li><div class="day">2025/06</div>&emsp;<div class="content"><a href="005.html">ボカコレ2025夏ルーキーに参戦します。</a></div></li>
-            <li><div class="day">2025/05</div>&emsp;<div class="content">公式サイトを作成しました。</div></li>
-            <li><div class="day">2025/02</div>&emsp;<div class="content">新曲「シリウス」を公開しました。</div></li>
-            <li><div class="day">2024/08</div>&emsp;<div class="content">新曲「青ヰ僕等ノ歌」を公開しました。</div></li>
-            <li><div class="day">2024/05</div>&emsp;<div class="content">ニコニコ、youtubeチャンネルを公開しました。</div></li>
+            <li><div class="day">2025/06</div>&emsp;<div class="content"><a href="005.html" style="text-decoration: none;" ><font color="black"> ボカコレ2025夏ルーキーに参戦します。</a></div></li>
+            <li><div class="day">2025/05</div>&emsp;<div class="content"><a href="004.html" style="text-decoration: none;" ><font color="black">公式サイトを作成しました。</font></a></div></li>
+            <li><div class="day">2025/02</div>&emsp;<div class="content"><a href="003.html" style="text-decoration:none;"><font color="black">新曲「シリウス」を公開しました。</font></a></div></li>
+            <li><div class="day">2024/08</div>&emsp;<div class="content"><a href="002.html" style="text-decoration: none;"><font color="black">新曲「青ヰ僕等ノ歌」を公開しました。</font></a></div></li>
+            <li><div class="day">2024/05</div>&emsp;<div class="content"><a href="001.html" style="text-decoration: none;"><font color="black">ニコニコ、youtubeチャンネルを公開しました。</font></a></div></li>
           </ul>
         <footer class="footer">
           <p>© 2025 キョーカスイゲツ。</p>
