--- a/strage/index.html
+++ b/strage/index.html
@@ -62,16 +62,15 @@
               &emsp;&emsp;Googleドライブにての配布です。<br>
               &emsp;トラック別データも存在します。<br>
               &emsp;ご活用ください！<br>
-              &emsp;<button class="button"><a href="https://drive.google.com/drive/folders/1nL9B-QPpGYPjDpANVyXFutXWdnF_E3Mj?usp=drive_link" style="text-decoration:none;"><font color="00000" >トラック別データ</font></a></button>
-              &emsp;<button class="button"><a href="https://drive.google.com/file/d/1sMLiI2n_S-SybevGE3E4LdH1ysO8_peI/view?usp=drive_link"style="text-decoration:none;"><font color="00000">instデータ</font></a></button>
+              &emsp;<a href="https://drive.google.com/drive/folders/1nL9B-QPpGYPjDpANVyXFutXWdnF_E3Mj?usp=drive_link" style="text-decoration:none;"><button class="button"><font color="00000" >トラック別データ</font></button></a>
+              &emsp;<a href="https://drive.google.com/file/d/1sMLiI2n_S-SybevGE3E4LdH1ysO8_peI/view?usp=drive_link"style="text-decoration:none;"><button class="button"><font color="00000">instデータ</font></button></a>
             </p>
             <p>
               <strong>シリウス</strong><br>
               &emsp;&emsp;piaprostudioにての配布です。<br>
               &emsp;トラック別データはないです…<br>
               &emsp;メールでもいただければ送るかも…<br>
-              <button class="button"><a href="https://piapro.jp/t/rSrF"style="text-decoration:none;"><font color="00">instデータ</font></a></button>
-            </p>
+              <a href="https://piapro.jp/t/rSrF"style="text-decoration:none;"><button class="button"><font color="00">instデータ</font></button></a>
           </blockquote>
           </div>
           
