--- a/strage/index.html
+++ b/strage/index.html
@@ -41,6 +41,7 @@
         <p></p>
         <p></p>
         <p></p>
+        <div class="honbun">
         <h2 class="subtitle">Strage</h2>
         <blockquote>
           <h3 style="text-align: center;">音源利用について</h3>
@@ -75,6 +76,7 @@
           </div>
           
         </blockquote>
+        </div>
         </div>
         
         <footer class="footer">
