--- a/contact/index.html
+++ b/contact/index.html
@@ -53,7 +53,7 @@
           <input type="hidden" name="_captcha" value="false">
   
           お名前<br>
-          <input type="text" name="yourname" required><br><br>
+          <input type="text" name="yourname" required onchange="validateText(this)"><br><br>
 
           メールアドレス<br>
           <input type="email" name="mail" required><br><br>
@@ -66,7 +66,7 @@
           </select><br><br>
 
           お問い合わせ内容<br>
-          <textarea name="naiyou" required></textarea><br><br>
+          <textarea name="naiyou" required onchange="validateText(this)"></textarea><br><br>
 
           <input type="submit" value="送信する">
         </form>
@@ -79,7 +79,7 @@
           const kinds = this.kinds.value;
           const naiyou = this.naiyou.value;
 
-          const webhookUrl = "https://discordapp.com/api/webhooks/1386898691385852006/k9dZhD8o5wxCPNCbHeLbJ1Y0qUo_NCP3anfLKTVTyFGuWgDx5Z4IlJrpeZwPJfnxdgjm";
+          const webhookUrl = "";
           const content = `📩 **新しいお問い合わせ**\n**名前:** ${yourname}\n**メール:** ${mail}\n**種別:** ${kinds}\n**内容:** ${naiyou}`;
 
   fetch(webhookUrl, {
