--- a/inform/index.html
+++ b/inform/index.html
@@ -51,6 +51,7 @@
         <p>&emsp;</p>
         <h2>News　Archive</h2>
           <ul>
+            <li><div class="day">2025/08</div>&emsp;<div class="content"><a href="006.html" style="text-decoration: none;" ><font color="black"> いよいよ明日に迫ってまいりました！</a></div></li>
             <li><div class="day">2025/06</div>&emsp;<div class="content"><a href="005.html" style="text-decoration: none;" ><font color="black"> ボカコレ2025夏ルーキーに参戦します。</a></div></li>
             <li><div class="day">2025/05</div>&emsp;<div class="content"><a href="004.html" style="text-decoration: none;" ><font color="black">公式サイトを作成しました。</font></a></div></li>
             <li><div class="day">2025/02</div>&emsp;<div class="content"><a href="003.html" style="text-decoration:none;"><font color="black">新曲「シリウス」を公開しました。</font></a></div></li>
