--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   </nav>
   <h1><a href="index.html" style="text-decoration:none;" ;><font color="black">キョーカスイゲツ。の公式サイト</font></a></h1>
   </header>
-  <p>あ</p>
-  <p>あ</p>
+  <p>&emsp13;</p>
+  <p>&emsp13;</p>
   <div class="header2"></div>
     <img src="1500x500.jpg" title="top用の写真" width="100%">
   </div>
@@ -62,11 +62,12 @@
     <div class="sekiguti">
       <h3>&emsp;新着情報(直近5件マデ)</h3>
       <ul>
-        <li><div class="day">2024/05</div>&emsp;<div class="content">ニコニコ、youtubeチャンネルを公開しました。</div></li>
-        <li><div class="day">2024/08</div>&emsp;<div class="content">新曲「青ヰ僕等ノ歌」を公開しました。</div></li>
-        <li><div class="day">2025/02</div>&emsp;<div class="content">新曲「シリウス」を公開しました。</div></li>
-        <li><div class="day">2025/05</div>&emsp;<div class="content">公式サイトを作成しました。</div></li>
-      </ul>
+            <li><div class="day">2025/08</div>&emsp;<div class="content"><a href="../inform/006.html" style="text-decoration: none;" ><font color="black"> いよいよ明日に迫ってまいりました！</a></div></li>
+            <li><div class="day">2025/06</div>&emsp;<div class="content"><a href="../inform/005.html" style="text-decoration: none;" ><font color="black"> ボカコレ2025夏ルーキーに参戦します。</a></div></li>
+            <li><div class="day">2025/05</div>&emsp;<div class="content"><a href="../inform/004.html" style="text-decoration: none;" ><font color="black">公式サイトを作成しました。</font></a></div></li>
+            <li><div class="day">2025/02</div>&emsp;<div class="content"><a href="../inform/003.html" style="text-decoration:none;"><font color="black">新曲「シリウス」を公開しました。</font></a></div></li>
+            <li><div class="day">2024/08</div>&emsp;<div class="content"><a href="../inform/002.html" style="text-decoration: none;"><font color="black">新曲「青ヰ僕等ノ歌」を公開しました。</font></a></div></li>
+          </ul>
     </div>
     <div class="character">
       <p class="kangei">訪問感謝！！
