--- a/inform/007.html
+++ b/inform/007.html
@@ -49,17 +49,27 @@
       </header>
         <p>&emsp;</p>
         <p>&emsp;</p>
-        <h2>News　Archive</h2>
-          <ul>
-            <li><div class="day">2025/09</div>&emsp;<div class="content"><a href="007.html" style="text-decoration: none;" ><font color="black"> ボカコレに参加しました！</a></div></li>
-            <li><div class="day">2025/08</div>&emsp;<div class="content"><a href="006.html" style="text-decoration: none;" ><font color="black"> いよいよ明日に迫ってまいりました！</a></div></li>
-            <li><div class="day">2025/06</div>&emsp;<div class="content"><a href="005.html" style="text-decoration: none;" ><font color="black"> ボカコレ2025夏ルーキーに参戦します。</a></div></li>
-            <li><div class="day">2025/05</div>&emsp;<div class="content"><a href="004.html" style="text-decoration: none;" ><font color="black">公式サイトを作成しました。</font></a></div></li>
-            <li><div class="day">2025/02</div>&emsp;<div class="content"><a href="003.html" style="text-decoration:none;"><font color="black">新曲「シリウス」を公開しました。</font></a></div></li>
-            <li><div class="day">2024/08</div>&emsp;<div class="content"><a href="002.html" style="text-decoration: none;"><font color="black">新曲「青ヰ僕等ノ歌」を公開しました。</font></a></div></li>
-            <li><div class="day">2024/05</div>&emsp;<div class="content"><a href="001.html" style="text-decoration: none;"><font color="black">ニコニコ、youtubeチャンネルを公開しました。</font></a></div></li>
-          </ul>
-        <footer class="footer">
-          <p>© 2025 キョーカスイゲツ。</p>
+        <div class="honbun">
+            <h3>ボカコレに参加しました！</h3>2025/09
+            <p>
+              こんにちは～<br>
+              まだまだ暑いですね。<br>
+              新学期が始まり、暑すぎると苦しんでいます。<br>
+              どうも、キョーカスイゲツ。です。<br>
+              いや～今回のボカコレも激戦でしたね。<br>
+              毎回、次こそはと思っているのですが、、、<br>
+              そろそろ、無色透明祭の準備もしないとですよね～～<br>
+              あと、個人的にうれしいことがありました。<br>
+              最近piaproに絵を何枚か挙げたのですが、<br>
+              ボカコレに使用してくださった人がいるようです。<br>
+              有償依頼を受ける予定はないですが、こうやって<br>
+              使用してくれる方がいらっしゃると<br>
+              嬉しいですね～<br>
+              では！暑いので皆様もご自愛ください！
+            </p>
+        </div>
+        
+        <footer class="footer"><p>© 2025 キョーカスイゲツ。</p></footer>
+
     </body>
 </html>
