--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <li><a href="#about_me">私について</a></li>
         <li><a href="strage/index.html">作品置き場</a></li>
         <li><a href="contact/index.html">お問い合わせ</a></li>
+        <li><a href="../assignment/index.html">課題用</a></li>
     </ul>
   </nav>
   <h1><a href="index.html" style="text-decoration:none;" ;><font color="black">キョーカスイゲツ。の公式サイト</font></a></h1>
