--- a/assignment/index.html
+++ b/assignment/index.html
@@ -50,7 +50,7 @@
                 if(confirm("課題を見ますか？？？")){
                     console.log('なんで見るんですか？');}
                     else{
-                        console.log('なんで見るんですか？');
+                        console.log('なんで見ないんですか？');
                     }
             </script>
             <div class="container">
